--- a/src/main/resources/saveDataEditor/controllers/player_data_stage.fxml
+++ b/src/main/resources/saveDataEditor/controllers/player_data_stage.fxml
@@ -35,14 +35,16 @@
          <Label layoutX="166.0" layoutY="30.0" text="Forging:" />
          <Label layoutX="6.0" layoutY="58.0" text="Planting:" />
          <Label layoutX="166.0" layoutY="58.0" text="Taming:" />
-         <Label layoutX="33.0" layoutY="88.0" text="Talisman crafting:" />
+         <Label layoutX="33.0" layoutY="81.0" text="Talisman crafting:" />
          <TextField fx:id="gathering_level" layoutX="62.0" layoutY="3.0" minHeight="-Infinity" prefHeight="20.0" prefWidth="100.0" promptText="gathering level" />
          <TextField fx:id="mining_level" layoutX="211.0" layoutY="3.0" minHeight="-Infinity" prefHeight="20.0" prefWidth="83.0" promptText="mining level" />
          <TextField fx:id="alchemy_level" layoutX="55.0" layoutY="29.0" minHeight="-Infinity" prefHeight="20.0" prefWidth="107.0" promptText="alchemy level" />
          <TextField fx:id="forging_level" layoutX="211.0" layoutY="29.0" minHeight="-Infinity" prefHeight="20.0" prefWidth="83.0" promptText="forging level" />
          <TextField fx:id="planting_level" layoutX="55.0" layoutY="57.0" minHeight="-Infinity" prefHeight="20.0" prefWidth="107.0" promptText="planting level" />
          <TextField fx:id="taming_level" layoutX="211.0" layoutY="57.0" minHeight="-Infinity" prefHeight="20.0" prefWidth="83.0" promptText="taming level" />
-         <TextField fx:id="talisman_level" disable="true" layoutX="128.0" layoutY="87.0" minHeight="-Infinity" prefHeight="20.0" prefWidth="129.0" promptText="talisman crafting level" />
+         <TextField fx:id="talisman_level" disable="true" layoutX="129.0" layoutY="79.0" minHeight="-Infinity" prefHeight="20.0" prefWidth="129.0" promptText="talisman crafting level" />
+         <Label layoutX="33.0" layoutY="110.0" text="Spirit Stones:" />
+         <TextField fx:id="spirit_stones" alignment="CENTER" layoutX="109.0" layoutY="108.0" minHeight="-Infinity" prefHeight="20.0" prefWidth="149.0" promptText="spirit stones amount" />
       </Pane>
       <Label alignment="CENTER" layoutX="299.0" layoutY="5.0" prefHeight="17.0" prefWidth="279.0" style="-fx-background-color: darkgrey;" text="Player Attributes:" textAlignment="CENTER" />
       <Separator layoutX="298.0" layoutY="5.0" orientation="VERTICAL" prefHeight="154.0" prefWidth="0.0" />
