--- a/src/main/resources/saveDataEditor/controllers/player_inventory_stage.fxml
+++ b/src/main/resources/saveDataEditor/controllers/player_inventory_stage.fxml
@@ -3,17 +3,33 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="460.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="saveDataEditor.controllers.PlayerInventoryController">
+<AnchorPane prefHeight="530.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="saveDataEditor.controllers.PlayerInventoryController">
    <children>
       <Button layoutX="526.0" layoutY="11.0" mnemonicParsing="false" onAction="#exit_button_processing" prefHeight="37.0" prefWidth="60.0" text="Exit" />
       <Button layoutX="443.0" layoutY="8.0" mnemonicParsing="false" onAction="#back_button_processing" prefHeight="44.0" prefWidth="73.0" text="Back to menu" textAlignment="CENTER" wrapText="true" />
       <Button layoutX="14.0" layoutY="17.0" mnemonicParsing="false" onAction="#open_folder" onMouseEntered="#show_help" onMouseExited="#disable_help" text="Open Save File" />
       <Label fx:id="help_text_file_open" layoutX="14.0" layoutY="48.0" text="example path: E:\SteamLibrary\steamapps\common\...\save\0svwp.dat" visible="false" />
       <Label fx:id="current_path_label" layoutX="117.0" layoutY="13.0" prefHeight="37.0" prefWidth="320.0" text="Current:" visible="false" wrapText="true" />
-      <Pane fx:id="data_pane" layoutX="10.0" layoutY="72.0" prefHeight="382.0" prefWidth="581.0" style="-fx-background-insets: 0 0 -1 0, -1, 1, 1; -fx-background-color: -fx-shadow-highlight-color,        -fx-outer-border,        -fx-inner-border,        -fx-body-color; -fx-background-radius: 3px, 3px, 2px, 1px;">
+      <Pane fx:id="data_pane" layoutX="10.0" layoutY="72.0" prefHeight="432.0" prefWidth="581.0" style="-fx-background-insets: 0 0 -1 0, -1, 1, 1; -fx-background-color: -fx-shadow-highlight-color,        -fx-outer-border,        -fx-inner-border,        -fx-body-color; -fx-background-radius: 3px, 3px, 2px, 1px;">
          <children>
             <Button layoutX="481.0" layoutY="343.0" mnemonicParsing="false" text="Save Inventory" />
             <Label fx:id="current_size_label" layoutX="14.0" layoutY="6.0" text="current size of the inventory:" />
+            <ListView fx:id="item_list" layoutX="14.0" layoutY="29.0" prefHeight="200.0" prefWidth="463.0" />
+            <Button fx:id="edit_item_button" layoutX="481.0" layoutY="29.0" mnemonicParsing="false" onAction="#edit_selected_item" prefHeight="44.0" prefWidth="95.0" text="edit selected item" textAlignment="CENTER" wrapText="true" />
+            <Pane layoutX="14.0" layoutY="235.0" prefHeight="129.0" prefWidth="463.0">
+               <children>
+                  <Label fx:id="inv_slot_label" layoutX="10.0" text="slot:" />
+                  <Label layoutX="14.0" layoutY="23.0" text="ID:" />
+                  <TextField fx:id="edit_item_id_field" layoutX="36.0" layoutY="19.0" />
+                  <Label layoutX="14.0" layoutY="47.0" text="Amount (only for stackable items!!):" />
+                  <TextField fx:id="stack_amount" layoutX="209.0" layoutY="43.0" />
+                  <Label layoutX="14.0" layoutY="77.0" text="Quality(For forged items!!):" />
+                  <TextField fx:id="treasure_quality" layoutX="165.0" layoutY="73.0" />
+                  <Label fx:id="item_name" layoutX="185.0" prefHeight="17.0" prefWidth="210.0" text="name: " wrapText="true" />
+                  <Label layoutX="10.0" layoutY="110.0" text="Age (Only for spirit fruits!!)" />
+                  <TextField fx:id="plant_age" layoutX="166.0" layoutY="106.0" />
+               </children>
+            </Pane>
          </children></Pane>
 
    </children>
