--- a/src/main/resources/saveDataEditor/controllers/player_inventory_stage.fxml
+++ b/src/main/resources/saveDataEditor/controllers/player_inventory_stage.fxml
@@ -13,7 +13,7 @@
       <Label fx:id="current_path_label" layoutX="117.0" layoutY="13.0" prefHeight="37.0" prefWidth="320.0" text="Current:" visible="false" wrapText="true" />
       <Pane fx:id="data_pane" layoutX="10.0" layoutY="72.0" prefHeight="432.0" prefWidth="581.0" style="-fx-background-insets: 0 0 -1 0, -1, 1, 1; -fx-background-color: -fx-shadow-highlight-color,        -fx-outer-border,        -fx-inner-border,        -fx-body-color; -fx-background-radius: 3px, 3px, 2px, 1px;">
          <children>
-            <Button layoutX="460.0" layoutY="343.0" mnemonicParsing="false" onAction="#saveItemData" text="Save Inventory" />
+            <Button layoutX="460.0" layoutY="343.0" mnemonicParsing="false" onAction="#save_item_data" text="Save Inventory" />
             <Label fx:id="current_size_label" layoutX="14.0" layoutY="6.0" text="current size of the inventory:" />
             <ListView fx:id="item_list" layoutX="14.0" layoutY="29.0" prefHeight="200.0" prefWidth="463.0" />
             <Button fx:id="edit_item_button" alignment="CENTER" contentDisplay="CENTER" ellipsisString="" graphicTextGap="1.0" layoutX="481.0" layoutY="29.0" mnemonicParsing="false" onAction="#edit_selected_item" prefHeight="60.0" prefWidth="95.0" text="edit selected item" textAlignment="CENTER" textOverrun="CLIP" wrapText="true">
