--- a/src/main/resources/saveDataEditor/base.fxml
+++ b/src/main/resources/saveDataEditor/base.fxml
@@ -1,23 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ToolBar?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="401.0" prefWidth="613.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="saveDataEditor.controllers.BaseController">
+<AnchorPane prefHeight="401.0" prefWidth="613.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="saveDataEditor.controllers.BaseController">
    <ToolBar fx:id="first_tab" layoutY="2.0" prefHeight="35.0" prefWidth="613.0">
       <Button mnemonicParsing="false" onAction="#next_tab" text="Next tab" />
       <Button mnemonicParsing="false" onAction="#open_edit_player_data" text="Edit Player data" />
       <Button mnemonicParsing="false" onAction="#open_edit_player_inventory" text="Edit Player inventory" />
-      <Button mnemonicParsing="false" onAction="#open_edit_player_sect" text="Edit Player sect" />
+      <Button fx:id="comma_button" layoutX="179.0" layoutY="10.0" mnemonicParsing="false" onAction="#on_comma_click" text="Click to use Comma" />
       <Label alignment="CENTER" onMouseEntered="#on_hover_version_num" onMouseExited="#on_exit_version_num" prefHeight="18.0" prefWidth="96.0" text="Version: 1.0.4" />
    </ToolBar>
    <ToolBar fx:id="second_tab" layoutY="2.0" prefHeight="35.0" prefWidth="613.0" visible="false">
       <Button mnemonicParsing="false" onAction="#back_to_last_tab" text="Back to last tab" />
       <Button mnemonicParsing="false" onAction="#open_god_realm_editor" text="God realm editor" />
+      <Button mnemonicParsing="false" onAction="#open_edit_player_sect" text="Edit Player sect" />
    </ToolBar>
    <Button layoutX="569.0" layoutY="2.0" mnemonicParsing="false" onAction="#exit_button_processing" text="Exit" AnchorPane.rightAnchor="2.0" AnchorPane.topAnchor="2.0" />
    <Label alignment="CENTER" layoutX="2.0" layoutY="49.0" prefHeight="53.0" prefWidth="614.0" text="Please do not try editing the sect or the God Realm data before actually unlocking it! " textAlignment="CENTER" textFill="#9a0909" textOverrun="WORD_ELLIPSIS" wrapText="true">
