--- a/src/main/resources/saveDataEditor/base.fxml
+++ b/src/main/resources/saveDataEditor/base.fxml
@@ -10,7 +10,7 @@
       <Button mnemonicParsing="false" onAction="#open_edit_player_data" text="Edit Player data" />
       <Button mnemonicParsing="false" onAction="#open_edit_player_inventory" text="Edit Player inventory" />
       <Button fx:id="comma_button" layoutX="179.0" layoutY="10.0" mnemonicParsing="false" onAction="#on_comma_click" text="Click to use Comma" />
-      <Label alignment="CENTER" onMouseEntered="#on_hover_version_num" onMouseExited="#on_exit_version_num" prefHeight="18.0" prefWidth="96.0" text="Version: 1.0.4" />
+      <Label alignment="CENTER" onMouseEntered="#on_hover_version_num" onMouseExited="#on_exit_version_num" prefHeight="18.0" prefWidth="96.0" text="Version: 1.0.5" />
    </ToolBar>
    <ToolBar fx:id="second_tab" layoutY="2.0" prefHeight="35.0" prefWidth="613.0" visible="false">
       <Button mnemonicParsing="false" onAction="#back_to_last_tab" text="Back to last tab" />
@@ -34,17 +34,17 @@
             <Font size="23.0" />
          </font>
       </Label>
-      <Label layoutX="10.0" layoutY="195.0" prefHeight="47.0" prefWidth="180.0" text="&quot;Cultivation&quot; levels can be changed" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+      <Label layoutX="10.0" layoutY="48.0" prefHeight="47.0" prefWidth="180.0" text="Use comma as separator for decimal numbers" textAlignment="CENTER" textFill="#f2e5bf" wrapText="true">
          <font>
             <Font size="15.0" />
          </font>
       </Label>
-      <Label layoutX="10.0" layoutY="140.0" prefHeight="47.0" prefWidth="180.0" text="existing items in player inventory are editable now" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+      <Label layoutX="10.0" layoutY="187.0" prefHeight="47.0" prefWidth="180.0" text="existing items in player inventory are editable now" textAlignment="CENTER" textFill="WHITE" wrapText="true">
          <font>
             <Font size="15.0" />
          </font>
       </Label>
-      <Label layoutX="10.0" layoutY="48.0" prefHeight="86.0" prefWidth="180.0" text="God realm data editor tab is added and can be accessed by clicking on the &quot;Next tab&quot; button" textAlignment="CENTER" textFill="#f2e5bf" wrapText="true">
+      <Label layoutX="10.0" layoutY="95.0" prefHeight="86.0" prefWidth="180.0" text="God realm data editor tab is added and can be accessed by clicking on the &quot;Next tab&quot; button" textAlignment="CENTER" textFill="WHITE" wrapText="true">
          <font>
             <Font size="15.0" />
          </font>
