--- a/src/main/resources/saveDataEditor/controllers/player_inventory_stage.fxml
+++ b/src/main/resources/saveDataEditor/controllers/player_inventory_stage.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="530.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="saveDataEditor.controllers.PlayerInventoryController">
+<AnchorPane prefHeight="530.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="saveDataEditor.controllers.PlayerInventoryController">
    <children>
       <Button layoutX="526.0" layoutY="11.0" mnemonicParsing="false" onAction="#exit_button_processing" prefHeight="37.0" prefWidth="60.0" text="Exit" />
       <Button layoutX="443.0" layoutY="8.0" mnemonicParsing="false" onAction="#back_button_processing" prefHeight="44.0" prefWidth="73.0" text="Back to menu" textAlignment="CENTER" wrapText="true" />
@@ -39,6 +39,7 @@
                   <Font name="System Bold" size="12.0" />
                </font></Label>
          </children></Pane>
+      <Label fx:id="comma_text" alignment="CENTER" layoutX="14.0" prefHeight="17.0" prefWidth="95.0" text="using comma" textFill="#01bc3c" />
 
    </children>
 </AnchorPane>
